--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,16 @@ a {
 }
 
 /* ===========  Header ============= */
-.header {
+
+.fixed-header {
+    position: sticky;
+    background: #E6F0FF;
+    padding-top: 26px;
+    top: -26px;
+    z-index: 1;
+}
+
+.hero-wrap {
     position: relative;
     background: #E6F0FF;
     height: 100vh;
@@ -60,7 +69,7 @@ a {
     display: flex;
     align-items: center;
     /* margin collapse (margin -> padding) */
-    padding-top: 5rem;
+    padding: 12px 0;
 }
 
 .navbar ul {
@@ -96,7 +105,7 @@ a {
 }
 
 .hero {
-    margin-top: 130px;
+    padding-top: 130px;
 }
 
 .hero .info {
