--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,660 +1,656 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :root {
-    --primary-color: #0f1b4c;
+  --primary-color: #0f1b4c;
 }
 
 html {
-    font-size: 62.5%;
-    scroll-behavior: smooth;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-size: 1.6rem;
-    font-family: 'Poppins';
+  font-size: 1.6rem;
+  font-family: "Poppins";
 }
 
 /* Common */
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 .content {
-    width: 1110px;
-    max-width: calc(100% - 48px);
-    margin-left: auto;
-    margin-right: auto;
+  width: 1110px;
+  max-width: calc(100% - 48px);
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .btn {
-    display: inline-block;
-    padding: 18px 16px;
-    min-width: 98px;
-    background: var(--primary-color);
-    border-radius: 12px;
-    font-weight: 500;
-    font-size: 1.4rem;   
-    text-align: center;
-    color: #FFFFFF;
+  display: inline-block;
+  padding: 18px 16px;
+  min-width: 98px;
+  background: var(--primary-color);
+  border-radius: 12px;
+  font-weight: 500;
+  font-size: 1.4rem;
+  text-align: center;
+  color: #ffffff;
 }
 
 .line-clamp {
-    display: -webkit-box;
-    -webkit-line-clamp: var(--line-clamp, 2);
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line-clamp, 2);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .btn:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 /* ===========  Header ============= */
 
 .fixed-header {
-    position: sticky;
-    background: #E6F0FF;
-    padding-top: 26px;
-    top: -26px;
-    z-index: 1;
+  position: sticky;
+  background: #e6f0ff;
+  padding-top: 26px;
+  top: -26px;
+  z-index: 1;
 }
 
 .hero-wrap {
-    position: relative;
-    background: #E6F0FF;
-    height: calc(100vh - 90px);
+  position: relative;
+  background: #e6f0ff;
+  height: calc(100vh - 90px);
 }
 
 .navbar {
-    display: flex;
-    align-items: center;
-    /* margin collapse (margin -> padding) */
-    padding: 12px 0;
+  display: flex;
+  align-items: center;
+  /* margin collapse (margin -> padding) */
+  padding: 12px 0;
 }
 
 .navbar ul {
-    display: flex;
-    margin-left: 5rem;
+  display: flex;
+  margin-left: 5rem;
 }
 
 .navbar .action {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .navbar ul a {
-    font-weight: 500;
-    font-size: 1.4rem;
-    color: #4F5361;
-    padding: 8px 14px;
+  font-weight: 500;
+  font-size: 1.4rem;
+  color: #4f5361;
+  padding: 8px 14px;
 }
 
 .navbar ul a:hover {
-    text-decoration: underline ;
+  text-decoration: underline;
 }
 
 .navbar .action-link {
-    font-weight: 500;
-    font-size: 1.4rem;
-    color: var(--primary-color);
+  font-weight: 500;
+  font-size: 1.4rem;
+  color: var(--primary-color);
 }
 
 .navbar .action-btn {
-    padding: 13px 16px;
-    margin-left: 18px;
-    border-radius: 8px;
+  padding: 13px 16px;
+  margin-left: 18px;
+  border-radius: 8px;
 }
 
 .hero-wrap {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .hero-wrap .info {
-    /* lấy chỉ số trong thiết kế chia cho width content 1110 rồi nhân cho 100% */
-    width: 51%;
+  /* lấy chỉ số trong thiết kế chia cho width content 1110 rồi nhân cho 100% */
+  width: 51%;
 }
 
 .hero-wrap .sub-title {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1.8rem;
-    line-height: 1.5; 
-    letter-spacing: 0.01em;
-    color: #687690;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 1.5;
+  letter-spacing: 0.01em;
+  color: #687690;
 }
 
 .hero-wrap .title {
-    margin-top: 8px;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 6.4rem;
-    line-height: 1.19;
-    color: #000336;
-    
+  margin-top: 8px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 6.4rem;
+  line-height: 1.19;
+  color: #000336;
 }
 
 .hero-wrap .desc {
-    margin-top: 30px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.8rem;
-    line-height: 1.78;
-    color: #5A6473; 
+  margin-top: 30px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.8rem;
+  line-height: 1.78;
+  color: #5a6473;
 }
 
 .hero-cta {
-    margin-top: 40px;
-    min-width: 170px;
+  margin-top: 40px;
+  min-width: 170px;
 }
 
 .hero-img {
-    position: absolute;
-    bottom: 0;
-    right: calc((100vw - 1110px) / 2 - 100px);
+  position: absolute;
+  bottom: 0;
+  right: calc((100vw - 1110px) / 2 - 100px);
 }
 
 /* ===========  Client ============= */
 .clients {
-    margin-top: 79px;
-    padding: 43px 0  64px;
+  margin-top: 79px;
+  padding: 43px 0 64px;
 }
 
 .clients .row {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .clients .desc {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1.6rem;
-    line-height: 1.25;
-    color: #7D8589;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 1.25;
+  color: #7d8589;
 }
 
 .clients .row-desc {
-    margin-top: 23px;
+  margin-top: 23px;
 }
 
 .clients .images {
-    margin-top: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  margin-top: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .clients .images a {
-    display: flex;
-    align-items: center;
-    height: 90px;
-    padding: 0 42px;
-    border-radius: 12px;
+  display: flex;
+  align-items: center;
+  height: 90px;
+  padding: 0 42px;
+  border-radius: 12px;
 }
 
 .clients .images a:hover {
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 /* ===========  Guides ============= */
 .guides {
-    margin-top: 40px;
-    padding: 93px 0 79px;
+  margin-top: 40px;
+  padding: 93px 0 79px;
 }
 
 .guides .sub-title {
-    position: relative;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 3.5rem;
-    line-height: 1;
-    text-align: center;
-    color: #000339;
+  position: relative;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 3.5rem;
+  line-height: 1;
+  text-align: center;
+  color: #000339;
 }
 
 .guides .sub-title::before {
-    position: absolute;
-    top: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    content: "";
-    display: inline-block;
-    width: 41px;
-    height: 4px;
-    background: #000339;
-    border-radius: 12px;
+  position: absolute;
+  top: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  content: "";
+  display: inline-block;
+  width: 41px;
+  height: 4px;
+  background: #000339;
+  border-radius: 12px;
 }
 
 .guides .desc {
-    width: 459px;
-    max-width: 100%;
-    margin: 20px auto 0 auto;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 1.88;
-    text-align: center;
-    color: #5A6473;
+  width: 459px;
+  max-width: 100%;
+  margin: 20px auto 0 auto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.88;
+  text-align: center;
+  color: #5a6473;
 }
 
 /* list-guide */
 .list-guide {
-    display: flex;
-    justify-content: center;
-    margin-top: 70px;
+  display: flex;
+  justify-content: center;
+  margin-top: 70px;
 }
 
 .guide-item {
-    margin: 0 70px;
-    text-align: center;
+  margin: 0 70px;
+  text-align: center;
 }
 
 .guide-item .title {
-    margin-top: 26px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 2rem;
-    line-height: 1.1;
-    color: #3B3C45;
+  margin-top: 26px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 2rem;
+  line-height: 1.1;
+  color: #3b3c45;
 }
 
 .guide-item .link {
-    display: inline-block;
-    margin-top: 10px;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 1.4rem;
-    color: #0689FF;
+  display: inline-block;
+  margin-top: 10px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.4rem;
+  color: #0689ff;
 }
 
 .guide-item .arrow {
-    margin-left: 6px;
+  margin-left: 6px;
 }
 
 .guide-cta {
-    display: flex;
-    margin-top: 50px;
-    justify-content: center;
+  display: flex;
+  margin-top: 50px;
+  justify-content: center;
 }
 
 .guide-cta .btn {
-    min-width: 170px;
+  min-width: 170px;
 }
 
 /* ========= Featured=========== */
 .featured {
-    margin-top: 41px;
-    padding: 110px 0;
-    background: #F5FAFE;
+  margin-top: 41px;
+  padding: 110px 0;
+  background: #f5fafe;
 }
 
 .featured .sub-title {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 3.5rem;
-    line-height: 1;
-    color: #000339;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 3.5rem;
+  line-height: 1;
+  color: #000339;
 }
 
 .featured .row {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .featured .desc {
-    margin-top: 15px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 1.88;
-    color: #5A6473;
+  margin-top: 15px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.88;
+  color: #5a6473;
 }
 
 .featured .link {
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-    font-size: 1.8rem;
-    color: #0689FF;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 1.8rem;
+  color: #0689ff;
 }
 
 .featured .link .arrow {
-    margin-left: 8px;
+  margin-left: 8px;
 }
 
 .featured .list {
-    display: flex;
-    gap: 30px;
-    margin-top: 70px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  margin-top: 70px;
 }
 
 .featured .item {
-    flex: 1;
-    background: #FFFFFF;
-    border-radius: 12px;
+  flex: 1;
+  background: #ffffff;
+  border-radius: 12px;
 }
 
 .featured .item .thumb {
-    width: 100%;
-    height: 227px;
-    object-fit: cover;
-    border-top-right-radius: 12px;
-    border-top-left-radius: 12px;
+  width: 100%;
+  height: 227px;
+  object-fit: cover;
+  border-top-right-radius: 12px;
+  border-top-left-radius: 12px;
 }
 
 .featured .item .body {
-    padding: 17px 20px 24px;
+  padding: 17px 20px 24px;
 }
 .featured .item .title a {
-    font-weight: 600;
-    font-size: 2rem;
-    line-height: 1;
-    color: #000339;
+  font-weight: 600;
+  font-size: 2rem;
+  line-height: 1;
+  color: #000339;
 }
 
 .featured .item .desc {
-    font-weight: 500;
-    font-size: 1.4rem;
-    line-height: 1.5;
-    color: #A3A6AB;
-    word-break: break-all;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 1.5;
+  color: #a3a6ab;
+  word-break: break-all;
 }
 
 .featured .item .info {
-    display: flex;
-    margin-top: 22px;
-    align-items: center;
-    font-weight: 500;
-    font-size: 1.4rem;
-    line-height: 1.5;
-    letter-spacing: 0.01em;
-    color: #4D4D52;
+  display: flex;
+  margin-top: 22px;
+  align-items: center;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 1.5;
+  letter-spacing: 0.01em;
+  color: #4d4d52;
 }
 
 .featured .item .label {
-    margin-left: 8px;
-    font-weight: 500;
-    font-size: 14px;
-    letter-spacing: 0.01em;
-    color: #4D4D52;
+  margin-left: 8px;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 0.01em;
+  color: #4d4d52;
 }
 
 .featured .item .icon:first-child {
-    margin-left: 0;
+  margin-left: 0;
 }
 .featured .item .icon {
-    margin-left: 23px;
+  margin-left: 23px;
 }
 
 /* ========= Stats =========== */
 .stats {
-    margin-top: 75px;
-    padding: 50px 0;
+  margin-top: 75px;
+  padding: 50px 0;
 }
 
 .stats .content {
-    width: 1048px;
+  width: 1048px;
 }
 
 .stats .row {
-    display: flex;
+  display: flex;
 }
 
-.stats .img-block, .stats .info {
-    width: 50%;
+.stats .img-block,
+.stats .info {
+  width: 50%;
 }
 
 .stats .img-block {
-    position: relative;
+  position: relative;
 }
 
 .stats .img-block .image {
-    display: block;
-    margin-left: auto;
-    width: 400px;
-    height: 460px;
-    border-radius: 12px;
-    object-fit: cover;
+  display: block;
+  margin-left: auto;
+  width: 400px;
+  height: 460px;
+  border-radius: 12px;
+  object-fit: cover;
 }
 
 .stats .info {
-    padding-top: 79px;
-    padding-left: 165px;
+  padding-top: 79px;
+  padding-left: 165px;
 }
 
 .stats .info .sub-title {
-    position: relative;
-    width: 269px;
-    font-weight: 600;
-    font-size: 3.5rem;
-    line-height: 1.29;
-    color: #000339;
+  position: relative;
+  width: 269px;
+  font-weight: 600;
+  font-size: 3.5rem;
+  line-height: 1.29;
+  color: #000339;
 }
 
 .stats .info .sub-title::before {
-    position: absolute;
-    display: block;
-    content: "";
-    top: -10px;
-    left: 0;
-    width: 41px;
-    height: 4px;
-    background: #000339;
-    border-radius: 12px;
+  position: absolute;
+  display: block;
+  content: "";
+  top: -10px;
+  left: 0;
+  width: 41px;
+  height: 4px;
+  background: #000339;
+  border-radius: 12px;
 }
 
 .stats .info .desc {
-    margin-top: 20px;
-    width: 309px;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 1.88;
-    color: #5A6473;
+  margin-top: 20px;
+  width: 309px;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.88;
+  color: #5a6473;
 }
 
 .stats .stats-trend {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 45px 22px 40px;
-    width: 239px;
-    border-radius: 0px 0px 12px 12px;
-    background: #FFFFFF;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 45px 22px 40px;
+  width: 239px;
+  border-radius: 0px 0px 12px 12px;
+  background: #ffffff;
 }
 
 .stats-trend strong {
-    font-weight: 700;
-    font-size: 2.6rem;
-    letter-spacing: 0.01em;
-    color: #000339;
+  font-weight: 700;
+  font-size: 2.6rem;
+  letter-spacing: 0.01em;
+  color: #000339;
 }
 
 .stats-trend .row {
-    display: flex;
+  display: flex;
 }
 
 .stats-trend .icon {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .stats-trend .desc {
-    margin-top: 8px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.5rem;
-    color: #A7A7A7;
+  margin-top: 8px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.5rem;
+  color: #a7a7a7;
 }
 
 .stats-trend .separate {
-    margin-top: 25px;
-    height: 1.2px; 
-    background: #E9E9E9;
+  margin-top: 25px;
+  height: 1.2px;
+  background: #e9e9e9;
 }
 
 .stats-trend .avatar-block {
-    margin-top: 26px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px 14px;
+  margin-top: 26px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px 14px;
 }
 
 .stats-trend .avatar-group {
-    display: flex;
+  display: flex;
 }
 
 .stats .avatar {
-    margin-left: -3px;
-    width: 16.34px;
-    height: 16.34px;
-    object-fit: cover;
-    border-radius: 50%;
+  margin-left: -3px;
+  width: 16.34px;
+  height: 16.34px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .stats .avatar:first-child {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 .stats .row-qty {
-    padding: 0 32px;
-    justify-content: space-between;
-    margin-top: 110px;
-    
+  padding: 0 32px;
+  justify-content: space-between;
+  margin-top: 110px;
 }
 
 .stats .qty {
-    font-weight: 600;
-    font-size: 6.4rem;
-    color: #000000;
+  font-weight: 600;
+  font-size: 6.4rem;
+  color: #000000;
 }
 
 .stats .qty-desc {
-    margin-top: 24px;
-    font-weight: 500;
-    font-size: 1.8rem;
-    color: #7B8087;
+  margin-top: 24px;
+  font-weight: 500;
+  font-size: 1.8rem;
+  color: #7b8087;
 }
 
 /* ========= Subcription =========== */
 .subcription {
-    margin-top: 90px;
+  margin-top: 90px;
 }
 
 .subcription .body {
-    position: relative;
-    display: flex;
-    align-items: center;
-    height: 370px;
-    background: #063183;
-    border-radius: 20px;    
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 370px;
+  background: #063183;
+  border-radius: 20px;
 }
 
 .subcription .info {
-    width: 671px;
-    max-width: 100%;
-    padding: 0 80px;
+  width: 671px;
+  max-width: 100%;
+  padding: 0 80px;
 }
 
 .subcription .sub-title {
-    font-weight: 600;
-    font-size: 35px;
-    line-height: 1;
-    color: #FFFFFF;
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 1;
+  color: #ffffff;
 }
 
 .subcription .desc {
-    margin-top: 15px;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 1.8rem;
-    color: #FFFFFF;
-    opacity: 0.75;
+  margin-top: 15px;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.8rem;
+  color: #ffffff;
+  opacity: 0.75;
 }
 
 .subcription .btn {
-    margin-top: 20px;
-    min-width: 151px;
-    background: #FFFFFF;
-    font-weight: 500;
-    font-size: 1.3rem;
-    text-align: center;
-    color: #002366;
+  margin-top: 20px;
+  min-width: 151px;
+  background: #ffffff;
+  font-weight: 500;
+  font-size: 1.3rem;
+  text-align: center;
+  color: #002366;
 }
 
 .subcription .image {
-    position: absolute;
-    bottom: 0;
-    right: 221px;
+  position: absolute;
+  bottom: 0;
+  right: 221px;
 }
 
 /* ========= Subcription =========== */
 .footer {
-    margin-top: 55px;
-    padding: 50px 0 58px;
+  margin-top: 55px;
+  padding: 50px 0 58px;
 }
 
 .footer .row {
-    display: flex;
+  display: flex;
 }
 .footer .row-top {
-    gap: 185px;
+  column-gap: 185px;
 }
 
 .footer .column {
-    margin-top: 50px;
+  margin-top: 50px;
 }
-
 
 .footer .heading {
-    font-family: 'Lato',sans-serif;
-    font-weight: 700;
-    font-size: 2rem;
-    color: #1C1C1D;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  color: #1c1c1d;
 }
 
-
-.footer .list, .footer .desc {
-    margin-top: 42px;
+.footer .list,
+.footer .desc {
+  margin-top: 42px;
 }
 
 .footer .item {
-    margin-top: 18px;
+  margin-top: 18px;
 }
-.footer .item a , .footer .desc {
-    font-weight: 400;
-    font-size: 1.6rem;
-    color: #7A7A7E;
-    white-space: nowrap ;
+.footer .item a,
+.footer .desc {
+  font-weight: 400;
+  font-size: 1.6rem;
+  color: #7a7a7e;
+  white-space: nowrap;
 }
 
 .footer .desc {
-    white-space: normal;
-    line-height: 1.75;
+  white-space: normal;
+  line-height: 1.75;
 }
 
 .footer .social {
-    display: flex;
-    margin-top: 40px;
+  display: flex;
+  margin-top: 40px;
 }
 
 .footer .social-link {
-    margin-right: 16px;
-    width: 28px;
-    height: 28px;  
+  margin-right: 16px;
+  width: 28px;
+  height: 28px;
 }
 
 .footer .row-bottom {
-    margin-top: 81px;
-    align-items: center;
-    justify-content: space-between;
+  margin-top: 81px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .footer .copyright {
-    font-weight: 400;
-    font-size: 14px;
-    color: #C2C2C2;
+  font-weight: 400;
+  font-size: 14px;
+  color: #c2c2c2;
 }
-
-
-
-
